--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
         buildConfigField "String", "BASE_LIVE_URL", BASE_LIVE_URL
-
+        dataBinding {
+            enabled = true
+        }
     }
     buildTypes {
         release {
