--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
-        buildConfigField "String", "BASE_LIVE_URL", BASE_LIVE_URL
+//        buildConfigField "String", "BASE_LIVE_URL", BASE_LIVE_URL
         dataBinding {
             enabled = true
         }
